--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <script type="module">
         import { initializeApp } from "https://www.gstatic.com/firebasejs/10.8.0/firebase-app.js";
         import { getDatabase, ref, onValue, set, push, update, remove } from "https://www.gstatic.com/firebasejs/10.8.0/firebase-database.js";
-        import { getAuth, signInWithEmailAndPassword, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/10.8.0/firebase-auth.js";
+        import { getAuth, signInWithEmailAndPassword, onAuthStateChanged, signOut, updatePassword } from "https://www.gstatic.com/firebasejs/10.8.0/firebase-auth.js";
 
         const firebaseConfig = {
             apiKey: "AIzaSyBe5r6Irj3vTFv0X7gj08JBvaOQXvJ9LNg",
@@ -51,6 +51,7 @@
         window.fbSignIn = signInWithEmailAndPassword;
         window.fbOnAuthStateChanged = onAuthStateChanged;
         window.fbSignOut = signOut;
+        window.fbUpdatePassword = updatePassword;
 
         console.log("Firebase initialized with Auth");
     </script>
