--- a/index.html
+++ b/index.html
@@ -19,20 +19,10 @@
     <div id="app"></div>
 
     <script type="module">
+        import { firebaseConfig } from "./js/firebase-config.js";
         import { initializeApp } from "https://www.gstatic.com/firebasejs/10.8.0/firebase-app.js";
         import { getDatabase, ref, onValue, set, push, update, remove } from "https://www.gstatic.com/firebasejs/10.8.0/firebase-database.js";
         import { getAuth, signInWithEmailAndPassword, onAuthStateChanged, signOut, updatePassword } from "https://www.gstatic.com/firebasejs/10.8.0/firebase-auth.js";
-
-        const firebaseConfig = {
-            apiKey: "AIzaSyBe5r6Irj3vTFv0X7gj08JBvaOQXvJ9LNg",
-            authDomain: "axou-boutique.firebaseapp.com",
-            databaseURL: "https://axou-boutique-default-rtdb.firebaseio.com",
-            projectId: "axou-boutique",
-            storageBucket: "axou-boutique.firebasestorage.app",
-            messagingSenderId: "493330095587",
-            appId: "1:493330095587:web:4086634fe10e42061ed4d6",
-            measurementId: "G-CEK5K9R4X6"
-        };
 
         // Initialize Firebase
         const app = initializeApp(firebaseConfig);
